firefly-iii-importer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii-importer
  labels:
    app: firefly-iii-importer
spec:
  selector:
    matchLabels:
      app: firefly-iii-importer
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: firefly-iii-importer
        tier: frontend
    spec:
      containers:
      - image: fireflyiii/data-importer:version-1
        name: firefly-iii-importer
        ports:
        - containerPort: 8080
          name: firefly-iii
        imagePullPolicy: Always
