firefly-iii-importer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii-importer
  labels:
    app: firefly-iii-importer
spec:
  ports:
    - port: 8080
  selector:
    app: firefly-iii-importer
    tier: frontend
