firefly-iii-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii
  labels:
    app: firefly-iii
spec:
  ports:
    - port: 8080
  selector:
    app: firefly-iii
    tier: frontend
