temp-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: firefly-iii-temp
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`firefly-iii.firefly-iii.svc.cluster.local`)
      priority: 10
      services:
        - name: firefly-iii
          port: 80
